# AIoT--ModelPredition

./: .env.example  .gitignore  HANDOFF.md  Makefile  README.md  pyproject.toml  requirements.txt  start_dashboard.cmd  start_dashboard.sh  stop_dashboard.cmd  stop_dashboard.sh
artifacts/: lstm_soil.pt  lstm_soil_x_scaler.joblib  lstm_soil_y_scaler.joblib  metadata.json  nbeats_et0.pt  nbeats_et0_scaler.joblib
dual_forecast/: __init__.py  cli.py  cloud.py  config.py  decision.py  edge.py  esp32_receiver.py  et0.py  history.py  inference.py  irrigation.py  models.py  schemas.py  service.py  storage.py  training.py
firmware/esp32_s3_all_sensors/: README.md  esp32_s3_all_sensors.ino  wifi_credentials.h.example
scripts/: start_dashboard.ps1  start_dashboard.sh  stop_dashboard.ps1  stop_dashboard.sh
tests/: test_cli.py  test_cloud.py  test_decision.py  test_edge_and_reports.py  test_esp32_receiver.py  test_et0.py  test_history.py  test_inference.py  test_irrigation.py  test_service.py
