[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "aiot-dual-forecast"
version = "0.1.0"
description = "Offline N-BEATS ET0 and LSTM soil-moisture forecasting service"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.30,<0.35",
  "numpy>=2.0,<3",
  "pandas>=2.2,<3",
  "scikit-learn>=1.5,<2",
  "torch>=2.4,<3",
  "pydantic>=2.8,<3",
  "pyserial>=3.5,<4",
]

[project.optional-dependencies]
test = ["pytest>=8,<9", "httpx>=0.27,<0.29"]

[project.scripts]
dual-forecast = "dual_forecast.cli:main"

[tool.setuptools.packages.find]
include = ["dual_forecast*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
